<resources>
    <string name="app_name">MyGym</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="remeber_me">Remeber Me</string>
    <string name="log_in">Log in</string>
    <string name="forget_your_password">Forget Your Password?</string>
    <string-array name="cities">
        <item>Ahmedabad</item>
        <item>Gandhinagar</item>
    </string-array>
    <string name="title_activity_bottom_nav">BottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>