<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
  android:background="@drawable/img_1">

<ImageView
    android:layout_width="match_parent"
    android:layout_height="@dimen/_105sdp"
    android:id="@+id/img"
    android:layout_marginHorizontal="@dimen/_105sdp"
    android:layout_marginTop="@dimen/_150sdp"

    android:src="@drawable/baseline_account_circle_24"/>
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/login_txt"
      android:layout_below="@+id/img"
      android:text="LogIn"
      android:textColor="@color/white_trans"
      android:layout_marginHorizontal="@dimen/_100sdp"
      android:textSize="35sp"
      android:layout_marginTop="@dimen/_5sdp"
      android:paddingLeft="@dimen/_20sdp"
      />
  <EditText
        android:id="@+id/email"
       android:layout_below="@+id/login_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      android:inputType="textEmailAddress"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:textColor="@color/white_trans"
        android:textColorHint="@color/white_trans"
        android:hint="@string/email_id"
        android:layout_marginTop="@dimen/_10sdp"
      android:drawableStart="@drawable/baseline_email_24"
      android:paddingVertical="@dimen/_10sdp"
      android:paddingHorizontal="@dimen/_10sdp"
      android:textSize="20sp"
      android:drawablePadding="@dimen/_10sdp"
      android:background="@drawable/background"

      />
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/pass_frame"
    android:layout_below="@+id/email"
    android:layout_marginTop="@dimen/_20sdp">
  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:textColorHint="@color/white_trans"
      android:textColor="@color/white_trans"
      android:drawableStart="@drawable/baseline_password_24"
      android:drawablePadding="@dimen/_10sdp"
      android:paddingVertical="@dimen/_10sdp"
      android:paddingHorizontal="@dimen/_10sdp"
      android:layout_marginHorizontal="@dimen/_20sdp"
      android:textSize="20sp"
      android:background="@drawable/background"
      android:id="@+id/passwd"
      android:inputType="textPassword"
      />
  <ImageView
      android:layout_width="@dimen/_25sdp"
      android:layout_height="@dimen/_25sdp"
      android:id="@+id/show_pass"
      android:layout_gravity="center|end"
      android:layout_marginRight="@dimen/_30sdp"
    android:src="@drawable/show_pass"/>
  <ImageView
      android:visibility="gone"
      android:layout_width="@dimen/_25sdp"
      android:layout_height="@dimen/_25sdp"
    android:id="@+id/hide_pass"
      android:layout_gravity="center|end"
      android:layout_marginRight="@dimen/_30sdp"
      android:src="@drawable/hide_pass"/>



</FrameLayout>

  <CheckBox
      android:id="@+id/check_box"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
    android:layout_below="@+id/pass_frame"
    android:text="@string/remeber_me"
    android:textColor="@color/white_trans"
    android:textSize="20sp"
    android:layout_marginHorizontal="@dimen/_20sdp"
    android:layout_marginTop="@dimen/_20sdp"
    android:buttonTint="@color/white_trans"
      />
  <Button
      android:id="@+id/login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/log_in"
      android:layout_below="@+id/check_box"
      android:layout_marginTop="@dimen/_20sdp"
      android:textColor="@color/white_trans"
      android:textSize="20sp"
      android:textStyle="bold"
      android:layout_marginHorizontal="@dimen/_20sdp"
      android:layout_marginVertical="@dimen/_20sdp"
      android:background="@drawable/btn_press2"

      />
  <Button
      android:id="@+id/signup"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Sign Up"
      android:layout_below="@+id/login"
      android:layout_marginTop="@dimen/_20sdp"
      android:textColor="@color/black"
      android:textSize="20sp"
      android:textStyle="bold"
      android:layout_marginHorizontal="@dimen/_20sdp"
      android:layout_marginVertical="@dimen/_20sdp"
      android:background="@drawable/btn_press"
      />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/textview"
      android:layout_below="@+id/signup"
      android:text="@string/forget_your_password"
      android:textColor="@color/white_trans"
      android:layout_marginHorizontal="@dimen/_20sdp"
      android:textSize="20sp"
      android:layout_marginTop="@dimen/_10sdp"
      />






</RelativeLayout>

