<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@drawable/img_1">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_105sdp"
        android:id="@+id/signup_img"
        android:layout_marginHorizontal="@dimen/_105sdp"
        android:layout_marginTop="@dimen/_1sdp"

        android:src="@drawable/baseline_account_circle_24"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_txt"
        android:layout_below="@+id/signup_img"
        android:text="SignUp"
        android:textColor="@color/white_trans"
        android:layout_marginHorizontal="@dimen/_100sdp"
        android:textSize="35sp"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingLeft="@dimen/_20sdp"
        />
    <EditText
        android:id="@+id/signup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:textColor="@color/white_trans"
        android:textColorHint="@color/white_trans"
        android:hint="Name"
        android:layout_marginTop="@dimen/_20sdp"
        android:drawableStart="@drawable/baseline_person_24"
        android:paddingVertical="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:textSize="20sp"
        android:drawablePadding="@dimen/_10sdp"
        android:background="@drawable/signup_back"
        android:layout_below="@+id/signup_txt"

        />
    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:textColor="@color/white_trans"
        android:textColorHint="@color/white_trans"
        android:hint="@string/email_id"
        android:layout_marginTop="@dimen/_20sdp"
        android:drawableStart="@drawable/baseline_email_24"
        android:paddingVertical="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:textSize="20sp"
        android:drawablePadding="@dimen/_10sdp"
        android:background="@drawable/signup_back"
        android:layout_below="@+id/signup_name"


        />
    <EditText
        android:id="@+id/signup_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:textColor="@color/white_trans"
        android:textColorHint="@color/white_trans"
        android:hint="Phone Number"
        android:layout_marginTop="@dimen/_20sdp"
        android:drawableStart="@drawable/baseline_phone_24"
        android:paddingVertical="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:textSize="20sp"
        android:drawablePadding="@dimen/_10sdp"
        android:background="@drawable/signup_back"
        android:layout_below="@+id/signup_email"

        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_contact"
        android:hint="@string/password"
        android:textColorHint="@color/white_trans"
        android:textColor="@color/white_trans"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:textSize="20sp"
        android:background="@drawable/signup_back"
        android:id="@+id/signup_passwd"
        android:inputType="textPassword"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_passwd"
        android:hint="Confirm Password"
        android:textColorHint="@color/white_trans"
        android:textColor="@color/white_trans"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:textSize="20sp"
        android:background="@drawable/signup_back"
        android:id="@+id/signup_confpasswd"
        android:inputType="textPassword"
        />
    <EditText
        android:editable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_date"
        android:hint="Select Date Of Birth"
        android:textColor="@color/white_trans"
        android:background="@drawable/signup_back"
        android:layout_below="@+id/signup_confpasswd"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:textColorHint="@color/white_trans"
        android:paddingVertical="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:drawableStart="@drawable/baseline_calendar_month_24"
        android:drawablePadding="@dimen/_10sdp"
        android:textSize="20sp"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_below="@+id/signup_date"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:id="@+id/gender"

        >

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Male"
            android:layout_weight="1"
            android:textColor="@color/white_trans"
            android:buttonTint="@color/white_trans"
            android:id="@+id/male"
            android:textSize="20sp"/>
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Female"
        android:layout_weight="1"
        android:textColor="@color/white_trans"
        android:buttonTint="@color/white_trans"
        android:id="@+id/female"
        android:textSize="20sp"
        />
    </RadioGroup>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:layout_below="@+id/gender"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:background="@drawable/btn_press"
        />
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_below="@+id/signup_btn"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/white_trans"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="@dimen/_20sdp"

        android:background="@drawable/btn_press2"

        />
</RelativeLayout>
</ScrollView>